<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.00"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="ADD HABIT"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/menu_button"/>

            <Button
                android:id="@+id/menu_button"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="0dp"
                android:layout_weight="0.00"
                android:background="@drawable/menu"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="showMenu"
                app:layout_constraintStart_toStartOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/habit_title_field"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="50dp"
            android:background="@color/editTextBackground"
            android:hint="Habit Title"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/editTextHint"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/habit_reason_field"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@color/editTextBackground"
            android:hint="Reason"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/editTextHint"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/habit_date_selector"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@color/editTextBackground"
            android:hint="Start Date"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:clickable="true"
            android:focusable="false"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/editTextHint"
            android:textSize="14sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Frequency"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_m"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.14"
                android:background="@color/white"
                android:text="M"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="updateFrequency"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_t"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.14"
                android:background="@color/white"
                android:text="T"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="updateFrequency"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_w"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.14"
                android:background="@color/white"
                android:text="W"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="updateFrequency"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_r"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.14"
                android:background="@color/white"
                android:text="R"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="updateFrequency"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_f"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.14"
                android:background="@color/white"
                android:text="F"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="updateFrequency"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_sa"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.14"
                android:background="@color/white"
                android:text="Sa"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="updateFrequency"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_su"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.14"
                android:background="@color/white"
                android:text="Su"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="updateFrequency"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/add_habit_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient"
            android:text="ADD"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>